--- a/hunt.html
+++ b/hunt.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>BCCS Hunting</title>
+   <style type="text/css">
+    canvas {
+      border: solid 1px #000;
+    }
+  </style>
 </head>
 <body>
+  <canvas id="canvas" width="600" height="400"></canvas>
+  <script type="text/javascript">
+
+    //Create the Canvas
+    var canvas = document.getElementById("canvas");
+    var context = canvas.getContext("2d");
+
+    function playGame(){
+      requestAnimationFrame(playGame);
+    }
+
+    playGame()
+  </script>
 
 </body>
 </html>
