Jack Code Review

--- a/hunt.html
+++ b/hunt.html
@@ -7,19 +7,24 @@
     background-image: url("camo.jpg");
     }
 
-    .div1 {
+    .red-text {
+      color: red;
+    }
+
+    #playerOneId {
     	float: left;
-    	color: red !important;
     	margin-left: 300px;
     }
-    .div2 {
+
+    #playerTwoId {
     	float: right;
-    	color: red !important;
     	margin-right: 300px;
     }
-    .name {
+
+    .orange-text {
     	color: orange;
     }
+
     canvas {
       border: solid 1px #000;
       background-color: white;
@@ -29,9 +34,9 @@
 </head>
 <body>
 <center>
-<h1 class="name">BCCS Hunting</h1>
-<h4 class="div1">Player One: 5</h4>
-<h4 class="div2">Player Two: 7</h4><br><br><br>
+<h1 class="orange-text">BCCS Hunting</h1>
+<h4 class="red-text" id="playerOneId">Player One: 5</h4>
+<h4 class="red-text" id="playerTwoId">Player Two: 7</h4><br><br><br>
   <canvas id="canvas" width="600" height="400"></canvas>
   </center>
   <script type="text/javascript">
