--- a/hunt.html
+++ b/hunt.html
@@ -24,7 +24,7 @@
     .orange-text {
     	color: orange;
     }
-    
+
     canvas {
       border: solid 1px #000;
       background-color: white;
@@ -45,6 +45,13 @@
     var canvas = document.getElementById("canvas");
     var context = canvas.getContext("2d");
 
+    var rightGun = {
+      x: 510,
+      y: 195,
+      height: 15,
+      width: 70
+    }
+
     //make the turret on the right side of the canvas
     context.beginPath();
     context.arc(600, 200, 50, .5 * Math.PI, 1.5 * Math.PI);
@@ -55,9 +62,9 @@
     context.stroke();
 
     context.beginPath();
-    context.fillRect(510,195,70,15);
+    context.fillRect(rightGun.x,rightGun.y,rightGun.width,rightGun.height);
     context.strokeStyle = "black";
-    context.rect(510,195,70,15);
+    context.rect(rightGun.x,rightGun.y,rightGun.width,rightGun.height);
     context.stroke();
 
     //run through the code to make the game work
