--- a/hunt.html
+++ b/hunt.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BCCS Hunting</title>
-   <style type="text/css">
-    canvas {
-      border: solid 1px #000;
-    }
-  </style>
+	<title>BCCS Hunting</title>
+	<style type="text/css">
+		canvas {
+		border: solid 1px #000;
+	}
+</style>
 </head>
 <body>
-  <canvas id="canvas" width="600" height="400"></canvas>
-  <script type="text/javascript">
+	<canvas id="canvas" width="600" height="400"></canvas>
+	<script type="text/javascript">
+		var canvas = document.getElementById("canvas");
+		var context = canvas.getContext("2d");
 
-    //Create the Canvas
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
+		var box = {
+			x: 300,
+			y: 200,
+			size: 20,
+			color: "green"
+		}
 
-    function playGame(){
-      requestAnimationFrame(playGame);
-    }
+		function drawBox(){
+			context.fillStyle = box.color;
+			context.fillRect(box.x, box.y, box.size, box.size);
+		}
 
-    playGame()
-  </script>
-
+		document.addEventListener("keydown", function(event){
+			if (event.keyCode == 83) {
+				console.log(event.keyCode);
+			} else if (event.keyCode == 38) {
+				console.log(event.keyCode);
+			} else if (event.keyCode == 87) {
+				console.log(event.keyCode);
+			} else if (event.keyCode == 40){
+				console.log(event.keyCode);
+			} else if (event.keyCode == 32){
+				drawBox();
+			}
+		})
+	</script>
 </body>
 </html>
