fix background repeating

--- a/hunt.html
+++ b/hunt.html
@@ -5,6 +5,7 @@
    <style type="text/css">
     body {
     background-image: url("camo.jpg");
+    background-size: cover !important;
     }
 
     .red-text {
