--- a/hunt.html
+++ b/hunt.html
@@ -1,98 +1,78 @@
-  <title>BCCS Hunting</title>
-   <style type="text/css">
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>BCCS Hunting</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
+    <body>
+        <center>
+            <h1 class="orange-text">BCCS Hunting</h1>
+            <h4 class="red-text" id="playerOneId">Player One: 5</h4>
+            <h4 class="red-text" id="playerTwoId">Player Two: 7</h4><br><br><br>
+            <canvas id="canvas" width="600" height="400"></canvas>
+        </center>
+        <script type="text/javascript">
 
-    body {
-    background-image: url("camo.jpg");
-    background-size: cover !important;
-    }
+        //Create the Canvas
+        var canvas = document.getElementById("canvas");
+        var context = canvas.getContext("2d");
+        //creates array of animal objects
+        var animalObjects = [];
 
-    .red-text {
-      color: red;
-    }
+        //function to create an animal
+        function createAnimal(name, size, x, y, speed){
+            name = {
+            size: size,
+            x: x,
+            y: y,
+            speed: speed
+            };
+            animalObjects.push(name)
+        };
 
-    #playerOneId {
-    	float: left;
-    	margin-left: 300px;
-    }
+        //draws enemies on screen
+        function drawAnimals(){
+            //gives entity their data that's drawn on screen
 
-    #playerTwoId {
-    	float: right;
-    	margin-right: 300px;
-    }
+            //draws on screen
+            for (i = 0; i < animalObjects.length; i++){
+            context.beginPath()
+            context.fillRect(animalObjects[i].x, animalObjects[i].y, animalObjects[i].size, animalObjects[i].size)
+            context.closePath()
+            animalObjects[i].y += animalObjects[i].speed
 
-    .orange-text {
-    	color: orange;
-    }
-
-    canvas {
-      border: solid 1px #000;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas" width="600" height="400"></canvas>
-  <script type="text/javascript">
-
-    //Create the Canvas
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-    //creates array of animal objects
-    var animalObjects = [];
-
-    //function to create an animal
-    function createAnimal(name, size, x, y, speed){
-    	name = {
-    		size: size,
-    		x: x,
-    		y: y,
-    		speed: speed
-    	};
-    	animalObjects.push(name)
-    };
-
-    //draws enemies on screen
-    function drawAnimals(){
-    	//gives entity their data that's drawn on screen
-
-    	//draws on screen
-    	for (i = 0; i < animalObjects.length; i++){
-    		context.beginPath()
-    		context.fillRect(animalObjects[i].x, animalObjects[i].y, animalObjects[i].size, animalObjects[i].size)
-    		context.closePath()
-    		animalObjects[i].y += animalObjects[i].speed
-
-    	}
-    };
+            }
+        };
 
 
-    document.addEventListener("keydown", function(event){
-      if (event.keyCode == 83) {
+        document.addEventListener("keydown", function(event){
+            if (event.keyCode == 83) {
 
-      } else if (event.keyCode == 38) {
+            } else if (event.keyCode == 38) {
 
-      } else if (event.keyCode == 87) {
+            } else if (event.keyCode == 87) {
 
-      } else if (event.keyCode == 40){
+            } else if (event.keyCode == 40){
 
-      } else if (event.keyCode == 32){
+            } else if (event.keyCode == 32){
 
-      }
-    })
+            }
+        })
 
-    //run through the code to make the game work
-    function playGame(){
-		context.clearRect(0,0,canvas.width,canvas.height);
-    	drawAnimals()
-    	requestAnimationFrame(playGame);
-    }
+        //run through the code to make the game work
+        function playGame(){
+            context.clearRect(0,0,canvas.width,canvas.height);
+            drawAnimals()
+            requestAnimationFrame(playGame);
+        }
 
-    	createAnimal("deer", 20, 0, (0 - 20), 1);
-    	createAnimal("duck", 20, 200, (0 - 20), 1);
-    	createAnimal("bear", 20, 400, (0 - 20), 1);
+        createAnimal("deer", 20, 0, (0 - 20), 1);
+        createAnimal("duck", 20, 200, (0 - 20), 1);
+        createAnimal("bear", 20, 400, (0 - 20), 1);
 
-    playGame()
-  </script>
+        playGame()
+        </script>
 
-</body>
+    </body>
 </html>
 
