--- a/hunt.html
+++ b/hunt.html
@@ -11,53 +11,12 @@
             <h4 class="red-text" id="playerTwoId">Player Two: 7</h4><br><br><br>
             <canvas id="canvas" width="600" height="400"></canvas>
         </center>
+        <script src="animals.js"></script>
         <script type="text/javascript">
 
         //Create the Canvas
         var canvas = document.getElementById("canvas");
         var context = canvas.getContext("2d");
-        //creates array of animal objects
-        var animalObjects = [];
-
-        //function to create an animal
-        function createAnimal(name, size, x, y, speed){
-            name = {
-            size: size,
-            x: x,
-            y: y,
-            speed: speed
-            };
-            animalObjects.push(name)
-        };
-
-        //draws enemies on screen
-        function drawAnimals(){
-            //gives entity their data that's drawn on screen
-
-            //draws on screen
-            for (i = 0; i < animalObjects.length; i++){
-            context.beginPath()
-            context.fillRect(animalObjects[i].x, animalObjects[i].y, animalObjects[i].size, animalObjects[i].size)
-            context.closePath()
-            animalObjects[i].y += animalObjects[i].speed
-
-            }
-        };
-
-
-        document.addEventListener("keydown", function(event){
-            if (event.keyCode == 83) {
-
-            } else if (event.keyCode == 38) {
-
-            } else if (event.keyCode == 87) {
-
-            } else if (event.keyCode == 40){
-
-            } else if (event.keyCode == 32){
-
-            }
-        })
 
         //run through the code to make the game work
         function playGame(){
@@ -65,10 +24,6 @@
             drawAnimals()
             requestAnimationFrame(playGame);
         }
-
-        createAnimal("deer", 20, 0, (0 - 20), 1);
-        createAnimal("duck", 20, 200, (0 - 20), 1);
-        createAnimal("bear", 20, 400, (0 - 20), 1);
 
         playGame()
         </script>
