First commit for gun movement

--- a/hunt.html
+++ b/hunt.html
@@ -24,11 +24,10 @@
             //run through the code to make the game work
             function playGame(){
                 context.clearRect(0,0,canvas.width,canvas.height);
-                drawAnimals();
-
+                drawBoxGun();
                 requestAnimationFrame(playGame);
             }
-
+            
             playGame()
         </script>
 
