--- a/hunt.html
+++ b/hunt.html
@@ -11,21 +11,19 @@
             <h4 class="red-text" id="playerTwoId">Player Two: 7</h4><br><br><br>
             <canvas id="canvas" width="600" height="400"></canvas>
         </center>
+        <script src="canvas.js"></script>
         <script src="animals.js"></script>
         <script src="move_gun.js"></script>
         <script src="fire_bullets.js"></script>
         <script src="keyclick.js"></script>
         <script type="text/javascript">
 
-            //Create the Canvas
-            var canvas = document.getElementById("canvas");
-            var context = canvas.getContext("2d");
-
             //run through the code to make the game work
             function playGame(){
                 context.clearRect(0,0,canvas.width,canvas.height);
                 drawAnimals();
-
+                drawRightGun()
+                //drawBoxGun()
                 requestAnimationFrame(playGame);
             }
 
